# Bedrock

./: AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  FROZEN_CHARTER_v1.md  README.md  SECURITY.md  patch_gate.sh
.github/workflows/: ci.yml
docs/: bench_spec_v1.md  ir_spec_v0.md
script/: bench_smoke_ci.sh
tests/: patch_samples.md  run.sh
